#4 - improve api, first passing success case
